build/log/idf_py_stderr_output_41940
/home/pi/httptc/main/httptc.c: In function 'temperature_task':
/home/pi/httptc/main/httptc.c:14:13: error: implicit declaration of function 'gpio_set_level' [-Wimplicit-function-declaration]
   14 |             gpio_set_level(2, current_temp > target_temp);  // GPIO2 controls fan/LED
      |             ^~~~~~~~~~~~~~
/home/pi/httptc/main/httptc.c: In function 'app_main':
/home/pi/httptc/main/httptc.c:21:5: error: implicit declaration of function 'nvs_flash_init' [-Wimplicit-function-declaration]
   21 |     nvs_flash_init();
      |     ^~~~~~~~~~~~~~
/home/pi/httptc/main/httptc.c:28:5: error: implicit declaration of function 'gpio_set_direction' [-Wimplicit-function-declaration]
   28 |     gpio_set_direction(2, GPIO_MODE_OUTPUT);  // Set GPIO2 as output
      |     ^~~~~~~~~~~~~~~~~~
/home/pi/httptc/main/httptc.c:28:27: error: 'GPIO_MODE_OUTPUT' undeclared (first use in this function)
   28 |     gpio_set_direction(2, GPIO_MODE_OUTPUT);  // Set GPIO2 as output
      |                           ^~~~~~~~~~~~~~~~
/home/pi/httptc/main/httptc.c:28:27: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:82: esp-idf/main/CMakeFiles/__idf_main.dir/httptc.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
